// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pin plan exports > arduino-uno-rev3 > matches the arduino snapshot 1`] = `
"// PinHub pin plan: Arduino UNO Rev3 (arduino-uno-rev3)
// Connector: Arduino UNO R3/R4 shield headers
// Revision notes: none recorded in PinHub; check your board's silkscreen revision.
// Verify against: Arduino UNO Rev3 full pinout PDF https://content.arduino.cc/assets/A000066-full-pinout.pdf
// Pin functions from: https://github.com/arduino/ArduinoCore-avr/blob/1.8.8/variants/standard/pins_arduino.h
// Pin functions from: https://github.com/arduino/ArduinoCore-avr/blob/1.8.8/boards.txt
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Communication/Serial.adoc
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Communication/Wire.adoc
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Communication/SPI.adoc
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Analog%20IO/analogWrite.adoc
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Variables/Constants/ledbuiltin.adoc
// Generated by PinHub — verify against the source before wiring. 2026-09-26

#pragma once
#include <Arduino.h>

const uint8_t PINHUB_WIRE_SDA = A4;  // I2C 1: Wire SDA on Analog / Power position 18, A4 / SDA
const uint8_t PINHUB_WIRE_SCL = A5;  // I2C 1: Wire SCL on Analog / Power position 19, A5 / SCL
// CAUTION (PB5, onboard-led): Arduino: “The constant LED_BUILTIN is the number of the pin to which the on-board LED is connected.” The UNO core variant defines LED_BUILTIN as 13.
const uint8_t PINHUB_SPI_SCK = 13;  // SPI 1: SPI SCK on Digital position 14, D13 / SCK
const uint8_t PINHUB_SPI_MOSI = 11;  // SPI 1: SPI MOSI on Digital position 12, D11 / COPI
const uint8_t PINHUB_SPI_MISO = 12;  // SPI 1: SPI MISO on Digital position 13, D12 / CIPO
const uint8_t PINHUB_SPI_CS = 10;  // SPI 1: SPI CS on Digital position 11, D10 / CS
const uint8_t PINHUB_PWM1 = 3;  // PWM 1: TIMER2 B on Digital position 4, D3
const uint8_t PINHUB_PWM2 = 5;  // PWM 2: TIMER0 B on Digital position 6, D5
const uint8_t PINHUB_ADC1 = A0;  // ADC 1: ADC CH0 on Analog / Power position 14, A0
const uint8_t PINHUB_GPIO1 = 2;  // GPIO 1 on Digital position 3, D2
const uint8_t PINHUB_GPIO2 = 4;  // GPIO 2 on Digital position 5, D4
"
`;

exports[`pin plan exports > arduino-uno-rev3 > matches the c-header snapshot 1`] = `
"// PinHub pin plan: Arduino UNO Rev3 (arduino-uno-rev3)
// Connector: Arduino UNO R3/R4 shield headers
// Revision notes: none recorded in PinHub; check your board's silkscreen revision.
// Verify against: Arduino UNO Rev3 full pinout PDF https://content.arduino.cc/assets/A000066-full-pinout.pdf
// Pin functions from: https://github.com/arduino/ArduinoCore-avr/blob/1.8.8/variants/standard/pins_arduino.h
// Pin functions from: https://github.com/arduino/ArduinoCore-avr/blob/1.8.8/boards.txt
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Communication/Serial.adoc
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Communication/Wire.adoc
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Communication/SPI.adoc
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Analog%20IO/analogWrite.adoc
// Pin functions from: https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Variables/Constants/ledbuiltin.adoc
// Generated by PinHub — verify against the source before wiring. 2026-09-26

#ifndef PINHUB_PLAN_ARDUINO_UNO_REV3_H
#define PINHUB_PLAN_ARDUINO_UNO_REV3_H

#include <avr/io.h>

// I2C 1: Wire SDA on Analog / Power position 18, A4 / SDA
#define PINHUB_WIRE_SDA_PORT PORTC
#define PINHUB_WIRE_SDA_DDR DDRC
#define PINHUB_WIRE_SDA_PIN PINC
#define PINHUB_WIRE_SDA_BIT PC4
// I2C 1: Wire SCL on Analog / Power position 19, A5 / SCL
#define PINHUB_WIRE_SCL_PORT PORTC
#define PINHUB_WIRE_SCL_DDR DDRC
#define PINHUB_WIRE_SCL_PIN PINC
#define PINHUB_WIRE_SCL_BIT PC5
// CAUTION (PB5, onboard-led): Arduino: “The constant LED_BUILTIN is the number of the pin to which the on-board LED is connected.” The UNO core variant defines LED_BUILTIN as 13.
// SPI 1: SPI SCK on Digital position 14, D13 / SCK
#define PINHUB_SPI_SCK_PORT PORTB
#define PINHUB_SPI_SCK_DDR DDRB
#define PINHUB_SPI_SCK_PIN PINB
#define PINHUB_SPI_SCK_BIT PB5
// SPI 1: SPI MOSI on Digital position 12, D11 / COPI
#define PINHUB_SPI_MOSI_PORT PORTB
#define PINHUB_SPI_MOSI_DDR DDRB
#define PINHUB_SPI_MOSI_PIN PINB
#define PINHUB_SPI_MOSI_BIT PB3
// SPI 1: SPI MISO on Digital position 13, D12 / CIPO
#define PINHUB_SPI_MISO_PORT PORTB
#define PINHUB_SPI_MISO_DDR DDRB
#define PINHUB_SPI_MISO_PIN PINB
#define PINHUB_SPI_MISO_BIT PB4
// SPI 1: SPI CS on Digital position 11, D10 / CS
#define PINHUB_SPI_CS_PORT PORTB
#define PINHUB_SPI_CS_DDR DDRB
#define PINHUB_SPI_CS_PIN PINB
#define PINHUB_SPI_CS_BIT PB2
// PWM 1: TIMER2 B on Digital position 4, D3
#define PINHUB_PWM1_PORT PORTD
#define PINHUB_PWM1_DDR DDRD
#define PINHUB_PWM1_PIN PIND
#define PINHUB_PWM1_BIT PD3
// PWM 2: TIMER0 B on Digital position 6, D5
#define PINHUB_PWM2_PORT PORTD
#define PINHUB_PWM2_DDR DDRD
#define PINHUB_PWM2_PIN PIND
#define PINHUB_PWM2_BIT PD5
// ADC 1: ADC CH0 on Analog / Power position 14, A0
#define PINHUB_ADC1_PORT PORTC
#define PINHUB_ADC1_DDR DDRC
#define PINHUB_ADC1_PIN PINC
#define PINHUB_ADC1_BIT PC0
#define PINHUB_ADC1_CHANNEL 0
// GPIO 1 on Digital position 3, D2
#define PINHUB_GPIO1_PORT PORTD
#define PINHUB_GPIO1_DDR DDRD
#define PINHUB_GPIO1_PIN PIND
#define PINHUB_GPIO1_BIT PD2
// GPIO 2 on Digital position 5, D4
#define PINHUB_GPIO2_PORT PORTD
#define PINHUB_GPIO2_DDR DDRD
#define PINHUB_GPIO2_PIN PIND
#define PINHUB_GPIO2_BIT PD4

#endif // PINHUB_PLAN_ARDUINO_UNO_REV3_H
"
`;

exports[`pin plan exports > arduino-uno-rev3 > matches the json snapshot 1`] = `
"{
  "board": {
    "id": "arduino-uno-rev3",
    "name": "Arduino UNO Rev3"
  },
  "connector": "Arduino UNO R3/R4 shield headers",
  "revisionNotes": [],
  "verifySource": {
    "label": "Arduino UNO Rev3 full pinout PDF",
    "url": "https://content.arduino.cc/assets/A000066-full-pinout.pdf"
  },
  "notice": "Generated by PinHub — verify against the source before wiring.",
  "generated": "2026-09-26",
  "pinFunctionSources": [
    "https://github.com/arduino/ArduinoCore-avr/blob/1.8.8/variants/standard/pins_arduino.h",
    "https://github.com/arduino/ArduinoCore-avr/blob/1.8.8/boards.txt",
    "https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Communication/Serial.adoc",
    "https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Communication/Wire.adoc",
    "https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Communication/SPI.adoc",
    "https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Functions/Analog%20IO/analogWrite.adoc",
    "https://github.com/arduino/reference-en/blob/b367b025a1eb/Language/Variables/Constants/ledbuiltin.adoc"
  ],
  "mux": {
    "model": "fixed",
    "note": "Each ATmega328P peripheral signal is wired to one port pin, so Serial, Wire (I2C), SPI, and each PWM output have exactly the pins the UNO core variant lists."
  },
  "assignments": [
    {
      "peripheral": "I2C",
      "unit": 1,
      "instance": "Wire",
      "signal": "SDA",
      "pin": {
        "position": 18,
        "label": "A4 / SDA",
        "group": "Analog / Power"
      },
      "mcu": {
        "name": "PC4",
        "arduino": "A4"
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "I2C",
      "unit": 1,
      "instance": "Wire",
      "signal": "SCL",
      "pin": {
        "position": 19,
        "label": "A5 / SCL",
        "group": "Analog / Power"
      },
      "mcu": {
        "name": "PC5",
        "arduino": "A5"
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI",
      "signal": "SCK",
      "pin": {
        "position": 14,
        "label": "D13 / SCK",
        "group": "Digital"
      },
      "mcu": {
        "name": "PB5",
        "arduino": "13"
      },
      "routed": false,
      "default": false,
      "cautions": [
        {
          "flag": "onboard-led",
          "note": "Arduino: “The constant LED_BUILTIN is the number of the pin to which the on-board LED is connected.” The UNO core variant defines LED_BUILTIN as 13."
        }
      ]
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI",
      "signal": "MOSI",
      "pin": {
        "position": 12,
        "label": "D11 / COPI",
        "group": "Digital"
      },
      "mcu": {
        "name": "PB3",
        "arduino": "11"
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI",
      "signal": "MISO",
      "pin": {
        "position": 13,
        "label": "D12 / CIPO",
        "group": "Digital"
      },
      "mcu": {
        "name": "PB4",
        "arduino": "12"
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI",
      "signal": "CS",
      "pin": {
        "position": 11,
        "label": "D10 / CS",
        "group": "Digital"
      },
      "mcu": {
        "name": "PB2",
        "arduino": "10"
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "PWM",
      "unit": 1,
      "instance": "TIMER2",
      "signal": "B",
      "pin": {
        "position": 4,
        "label": "D3",
        "group": "Digital"
      },
      "mcu": {
        "name": "PD3",
        "arduino": "3"
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "PWM",
      "unit": 2,
      "instance": "TIMER0",
      "signal": "B",
      "pin": {
        "position": 6,
        "label": "D5",
        "group": "Digital"
      },
      "mcu": {
        "name": "PD5",
        "arduino": "5"
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "ADC",
      "unit": 1,
      "instance": "ADC",
      "signal": "CH0",
      "pin": {
        "position": 14,
        "label": "A0",
        "group": "Analog / Power"
      },
      "mcu": {
        "name": "PC0",
        "arduino": "A0"
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "GPIO",
      "unit": 1,
      "signal": "IO",
      "pin": {
        "position": 3,
        "label": "D2",
        "group": "Digital"
      },
      "mcu": {
        "name": "PD2",
        "arduino": "2"
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "GPIO",
      "unit": 2,
      "signal": "IO",
      "pin": {
        "position": 5,
        "label": "D4",
        "group": "Digital"
      },
      "mcu": {
        "name": "PD4",
        "arduino": "4"
      },
      "routed": false,
      "default": false,
      "cautions": []
    }
  ]
}
"
`;

exports[`pin plan exports > esp32-devkitc > matches the c-header snapshot 1`] = `
"// PinHub pin plan: ESP32-DevKitC V4 (esp32-devkitc)
// Connector: ESP32-DevKitC V4 J2/J3 headers
// Revision note: D0, D1, D2, D3, CMD, and CLK connect to module flash and are not recommended for other uses.
// Revision note: GPIO16 and GPIO17 are unavailable on ESP32-WROVER module variants; verify the installed module and board revision.
// Revision note: D0, D1, D2, D3, CMD, and CLK connect to module flash and are not recommended for general use.
// Verify against: ESP32-DevKitC V4 user guide https://docs.espressif.com/projects/esp-dev-kits/en/latest/esp32/esp32-devkitc/user_guide.html
// Pin functions from: https://docs.espressif.com/projects/esp-idf/en/v5.4/esp32/api-reference/peripherals/gpio.html
// Pin functions from: https://docs.espressif.com/projects/esp-dev-kits/en/latest/esp32/esp32-devkitc/user_guide.html
// Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/adc_channel.h
// Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/dac_channel.h
// Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/spi_pins.h
// Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/uart_pins.h
// Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/soc_caps.h
// Pin functions from: https://github.com/espressif/arduino-esp32/blob/3.3.9/variants/esp32/pins_arduino.h
// Pin functions from: https://github.com/espressif/arduino-esp32/blob/3.3.9/libraries/Wire/src/Wire.cpp
// Pin functions from: https://github.com/micropython/micropython/blob/v1.27.0/ports/esp32/machine_hw_spi.c
// Pin routing: Espressif: “Through IO MUX, RTC IO MUX and the GPIO matrix, peripheral input signals can be from any IO pins, and peripheral output signals can be routed to any IO pins.” ADC and DAC channels stay on their fixed pins.
// Generated by PinHub — verify against the source before wiring. 2026-09-26

#ifndef PINHUB_PLAN_ESP32_DEVKITC_H
#define PINHUB_PLAN_ESP32_DEVKITC_H

// I2C 1: I2C0 SDA on J3 position 6, IO21
#define PINHUB_I2C0_SDA 21
// I2C 1: I2C0 SCL on J3 position 3, IO22
#define PINHUB_I2C0_SCL 22
// SPI 1: SPI3 SCK on J3 position 9, IO18
#define PINHUB_SPI3_SCK 18
// SPI 1: SPI3 MOSI on J3 position 2, IO23
#define PINHUB_SPI3_MOSI 23
// SPI 1: SPI3 MISO on J3 position 8, IO19
#define PINHUB_SPI3_MISO 19
// SPI 1: SPI3 CS on J3 position 13, IO4, routed through the GPIO matrix
#define PINHUB_SPI3_CS 4
// UART 1: UART2 TX on J2 position 7, IO32, routed through the GPIO matrix
#define PINHUB_UART2_TX 32
// CAUTION (GPIO35, input-only): Espressif: “GPIO34-39 can only be set as input mode and do not have software-enabled pullup or pulldown functions.”
// UART 1: UART2 RX on J2 position 6, IO35, routed through the GPIO matrix
#define PINHUB_UART2_RX 35
// PWM 1: LEDC CH0 on J2 position 8, IO33, routed through the GPIO matrix
#define PINHUB_PWM1 33
// CAUTION (GPIO36, input-only): Espressif: “GPIO34-39 can only be set as input mode and do not have software-enabled pullup or pulldown functions.”
// ADC 1: ADC1 CH0 on J2 position 3, VP
#define PINHUB_ADC1 36
#define PINHUB_ADC1_CHANNEL 0
// DAC 1: DAC CH1 on J2 position 9, IO25
#define PINHUB_DAC1 25
#define PINHUB_DAC1_CHANNEL 1
// GPIO 1 on J2 position 11, IO27
#define PINHUB_GPIO1 27

#endif // PINHUB_PLAN_ESP32_DEVKITC_H
"
`;

exports[`pin plan exports > esp32-devkitc > matches the json snapshot 1`] = `
"{
  "board": {
    "id": "esp32-devkitc",
    "name": "ESP32-DevKitC V4"
  },
  "connector": "ESP32-DevKitC V4 J2/J3 headers",
  "revisionNotes": [
    "D0, D1, D2, D3, CMD, and CLK connect to module flash and are not recommended for other uses.",
    "GPIO16 and GPIO17 are unavailable on ESP32-WROVER module variants; verify the installed module and board revision.",
    "D0, D1, D2, D3, CMD, and CLK connect to module flash and are not recommended for general use."
  ],
  "verifySource": {
    "label": "ESP32-DevKitC V4 user guide",
    "url": "https://docs.espressif.com/projects/esp-dev-kits/en/latest/esp32/esp32-devkitc/user_guide.html"
  },
  "notice": "Generated by PinHub — verify against the source before wiring.",
  "generated": "2026-09-26",
  "pinFunctionSources": [
    "https://docs.espressif.com/projects/esp-idf/en/v5.4/esp32/api-reference/peripherals/gpio.html",
    "https://docs.espressif.com/projects/esp-dev-kits/en/latest/esp32/esp32-devkitc/user_guide.html",
    "https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/adc_channel.h",
    "https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/dac_channel.h",
    "https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/spi_pins.h",
    "https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/uart_pins.h",
    "https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/soc_caps.h",
    "https://github.com/espressif/arduino-esp32/blob/3.3.9/variants/esp32/pins_arduino.h",
    "https://github.com/espressif/arduino-esp32/blob/3.3.9/libraries/Wire/src/Wire.cpp",
    "https://github.com/micropython/micropython/blob/v1.27.0/ports/esp32/machine_hw_spi.c"
  ],
  "mux": {
    "model": "matrix",
    "note": "Espressif: “Through IO MUX, RTC IO MUX and the GPIO matrix, peripheral input signals can be from any IO pins, and peripheral output signals can be routed to any IO pins.” ADC and DAC channels stay on their fixed pins."
  },
  "assignments": [
    {
      "peripheral": "I2C",
      "unit": 1,
      "instance": "I2C0",
      "signal": "SDA",
      "pin": {
        "position": 6,
        "label": "IO21",
        "group": "J3"
      },
      "mcu": {
        "name": "GPIO21",
        "gpio": 21
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "I2C",
      "unit": 1,
      "instance": "I2C0",
      "signal": "SCL",
      "pin": {
        "position": 3,
        "label": "IO22",
        "group": "J3"
      },
      "mcu": {
        "name": "GPIO22",
        "gpio": 22
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI3",
      "signal": "SCK",
      "pin": {
        "position": 9,
        "label": "IO18",
        "group": "J3"
      },
      "mcu": {
        "name": "GPIO18",
        "gpio": 18
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI3",
      "signal": "MOSI",
      "pin": {
        "position": 2,
        "label": "IO23",
        "group": "J3"
      },
      "mcu": {
        "name": "GPIO23",
        "gpio": 23
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI3",
      "signal": "MISO",
      "pin": {
        "position": 8,
        "label": "IO19",
        "group": "J3"
      },
      "mcu": {
        "name": "GPIO19",
        "gpio": 19
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI3",
      "signal": "CS",
      "pin": {
        "position": 13,
        "label": "IO4",
        "group": "J3"
      },
      "mcu": {
        "name": "GPIO4",
        "gpio": 4
      },
      "routed": true,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "UART",
      "unit": 1,
      "instance": "UART2",
      "signal": "TX",
      "pin": {
        "position": 7,
        "label": "IO32",
        "group": "J2"
      },
      "mcu": {
        "name": "GPIO32",
        "gpio": 32
      },
      "routed": true,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "UART",
      "unit": 1,
      "instance": "UART2",
      "signal": "RX",
      "pin": {
        "position": 6,
        "label": "IO35",
        "group": "J2"
      },
      "mcu": {
        "name": "GPIO35",
        "gpio": 35
      },
      "routed": true,
      "default": false,
      "cautions": [
        {
          "flag": "input-only",
          "note": "Espressif: “GPIO34-39 can only be set as input mode and do not have software-enabled pullup or pulldown functions.”"
        }
      ]
    },
    {
      "peripheral": "PWM",
      "unit": 1,
      "instance": "LEDC",
      "signal": "CH0",
      "pin": {
        "position": 8,
        "label": "IO33",
        "group": "J2"
      },
      "mcu": {
        "name": "GPIO33",
        "gpio": 33
      },
      "routed": true,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "ADC",
      "unit": 1,
      "instance": "ADC1",
      "signal": "CH0",
      "pin": {
        "position": 3,
        "label": "VP",
        "group": "J2"
      },
      "mcu": {
        "name": "GPIO36",
        "gpio": 36
      },
      "routed": false,
      "default": false,
      "cautions": [
        {
          "flag": "input-only",
          "note": "Espressif: “GPIO34-39 can only be set as input mode and do not have software-enabled pullup or pulldown functions.”"
        }
      ]
    },
    {
      "peripheral": "DAC",
      "unit": 1,
      "instance": "DAC",
      "signal": "CH1",
      "pin": {
        "position": 9,
        "label": "IO25",
        "group": "J2"
      },
      "mcu": {
        "name": "GPIO25",
        "gpio": 25
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "GPIO",
      "unit": 1,
      "signal": "IO",
      "pin": {
        "position": 11,
        "label": "IO27",
        "group": "J2"
      },
      "mcu": {
        "name": "GPIO27",
        "gpio": 27
      },
      "routed": false,
      "default": false,
      "cautions": []
    }
  ]
}
"
`;

exports[`pin plan exports > esp32-devkitc > matches the micropython snapshot 1`] = `
"# PinHub pin plan: ESP32-DevKitC V4 (esp32-devkitc)
# Connector: ESP32-DevKitC V4 J2/J3 headers
# Revision note: D0, D1, D2, D3, CMD, and CLK connect to module flash and are not recommended for other uses.
# Revision note: GPIO16 and GPIO17 are unavailable on ESP32-WROVER module variants; verify the installed module and board revision.
# Revision note: D0, D1, D2, D3, CMD, and CLK connect to module flash and are not recommended for general use.
# Verify against: ESP32-DevKitC V4 user guide https://docs.espressif.com/projects/esp-dev-kits/en/latest/esp32/esp32-devkitc/user_guide.html
# Pin functions from: https://docs.espressif.com/projects/esp-idf/en/v5.4/esp32/api-reference/peripherals/gpio.html
# Pin functions from: https://docs.espressif.com/projects/esp-dev-kits/en/latest/esp32/esp32-devkitc/user_guide.html
# Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/adc_channel.h
# Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/dac_channel.h
# Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/spi_pins.h
# Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/uart_pins.h
# Pin functions from: https://github.com/espressif/esp-idf/blob/v5.4/components/soc/esp32/include/soc/soc_caps.h
# Pin functions from: https://github.com/espressif/arduino-esp32/blob/3.3.9/variants/esp32/pins_arduino.h
# Pin functions from: https://github.com/espressif/arduino-esp32/blob/3.3.9/libraries/Wire/src/Wire.cpp
# Pin functions from: https://github.com/micropython/micropython/blob/v1.27.0/ports/esp32/machine_hw_spi.c
# Pin routing: Espressif: “Through IO MUX, RTC IO MUX and the GPIO matrix, peripheral input signals can be from any IO pins, and peripheral output signals can be routed to any IO pins.” ADC and DAC channels stay on their fixed pins.
# Generated by PinHub — verify against the source before wiring. 2026-09-26

from machine import ADC, DAC, I2C, PWM, Pin, SPI, UART

i2c0 = I2C(0, sda=Pin(21), scl=Pin(22))  # I2C 1: J3 position 6, IO21; J3 position 3, IO22
spi3 = SPI(2, sck=Pin(18), mosi=Pin(23), miso=Pin(19))  # SPI 1: J3 position 9, IO18; J3 position 2, IO23; J3 position 8, IO19; J3 position 13, IO4, routed through the GPIO matrix
spi3_cs = Pin(4, Pin.OUT, value=1)
# CAUTION (GPIO35, input-only): Espressif: “GPIO34-39 can only be set as input mode and do not have software-enabled pullup or pulldown functions.”
uart2 = UART(2, tx=Pin(32), rx=Pin(35))  # UART 1: J2 position 7, IO32, routed through the GPIO matrix; J2 position 6, IO35, routed through the GPIO matrix
pwm1 = PWM(Pin(33))  # PWM 1: J2 position 8, IO33, routed through the GPIO matrix (LEDC CH0)
# CAUTION (GPIO36, input-only): Espressif: “GPIO34-39 can only be set as input mode and do not have software-enabled pullup or pulldown functions.”
adc1 = ADC(Pin(36))  # ADC 1: J2 position 3, VP (ADC1 CH0)
dac1 = DAC(Pin(25))  # DAC 1: J2 position 9, IO25 (DAC CH1)
gpio1 = Pin(27)  # GPIO 1: J2 position 11, IO27
"
`;

exports[`pin plan exports > raspberry-pi-5 > matches the c-header snapshot 1`] = `
"// PinHub pin plan: Raspberry Pi 5 (raspberry-pi-5)
// Connector: J8 40-pin GPIO header
// Revision notes: none recorded in PinHub; check your board's silkscreen revision.
// Verify against: Raspberry Pi GPIO documentation https://www.raspberrypi.com/documentation/computers/raspberry-pi.html
// Pin functions from: https://github.com/raspberrypi/documentation/blob/34dfb87309ab/documentation/asciidoc/computers/raspberry-pi/gpio-on-raspberry-pi.adoc
// Pin functions from: https://github.com/raspberrypi/utils/blob/ebc4a56bac3a/pinctrl/gpiochip_rp1.c
// Generated by PinHub — verify against the source before wiring. 2026-09-26

#ifndef PINHUB_PLAN_RASPBERRY_PI_5_H
#define PINHUB_PLAN_RASPBERRY_PI_5_H

// I2C 1: I2C1 SDA on physical pin 3, GPIO2
#define PINHUB_I2C1_SDA 2
// I2C 1: I2C1 SCL on physical pin 5, GPIO3
#define PINHUB_I2C1_SCL 3
// SPI 1: SPI0 SCK on physical pin 23, GPIO11
#define PINHUB_SPI0_SCK 11
// SPI 1: SPI0 MOSI on physical pin 19, GPIO10
#define PINHUB_SPI0_MOSI 10
// SPI 1: SPI0 MISO on physical pin 21, GPIO9
#define PINHUB_SPI0_MISO 9
// SPI 1: SPI0 CS0 on physical pin 24, GPIO8
#define PINHUB_SPI0_CS0 8
// UART 1: UART0 TX on physical pin 8, GPIO14
#define PINHUB_UART0_TX 14
// UART 1: UART0 RX on physical pin 10, GPIO15
#define PINHUB_UART0_RX 15
// PWM 1: PWM0 CH2 on physical pin 12, GPIO18
#define PINHUB_PWM1 18
// PWM 2: PWM0 CH0 on physical pin 32, GPIO12
#define PINHUB_PWM2 12
// GPIO 1 on physical pin 7, GPIO4
#define PINHUB_GPIO1 4
// GPIO 2 on physical pin 13, GPIO27
#define PINHUB_GPIO2 27

#endif // PINHUB_PLAN_RASPBERRY_PI_5_H
"
`;

exports[`pin plan exports > raspberry-pi-5 > matches the json snapshot 1`] = `
"{
  "board": {
    "id": "raspberry-pi-5",
    "name": "Raspberry Pi 5"
  },
  "connector": "J8 40-pin GPIO header",
  "revisionNotes": [],
  "verifySource": {
    "label": "Raspberry Pi GPIO documentation",
    "url": "https://www.raspberrypi.com/documentation/computers/raspberry-pi.html"
  },
  "notice": "Generated by PinHub — verify against the source before wiring.",
  "generated": "2026-09-26",
  "pinFunctionSources": [
    "https://github.com/raspberrypi/documentation/blob/34dfb87309ab/documentation/asciidoc/computers/raspberry-pi/gpio-on-raspberry-pi.adoc",
    "https://github.com/raspberrypi/utils/blob/ebc4a56bac3a/pinctrl/gpiochip_rp1.c"
  ],
  "mux": {
    "model": "fixed",
    "note": "Raspberry Pi: “Almost all of the GPIO pins have alternative functions.” PinHub plans only the header functions that documentation lists: I2C on GPIO2/3, SPI0, SPI1, serial on GPIO14/15, and hardware PWM on GPIO12, 13, 18, and 19."
  },
  "assignments": [
    {
      "peripheral": "I2C",
      "unit": 1,
      "instance": "I2C1",
      "signal": "SDA",
      "pin": {
        "position": 3,
        "label": "GPIO2"
      },
      "mcu": {
        "name": "GPIO2",
        "gpio": 2
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "I2C",
      "unit": 1,
      "instance": "I2C1",
      "signal": "SCL",
      "pin": {
        "position": 5,
        "label": "GPIO3"
      },
      "mcu": {
        "name": "GPIO3",
        "gpio": 3
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI0",
      "signal": "SCK",
      "pin": {
        "position": 23,
        "label": "GPIO11"
      },
      "mcu": {
        "name": "GPIO11",
        "gpio": 11
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI0",
      "signal": "MOSI",
      "pin": {
        "position": 19,
        "label": "GPIO10"
      },
      "mcu": {
        "name": "GPIO10",
        "gpio": 10
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI0",
      "signal": "MISO",
      "pin": {
        "position": 21,
        "label": "GPIO9"
      },
      "mcu": {
        "name": "GPIO9",
        "gpio": 9
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI0",
      "signal": "CS0",
      "pin": {
        "position": 24,
        "label": "GPIO8"
      },
      "mcu": {
        "name": "GPIO8",
        "gpio": 8
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "UART",
      "unit": 1,
      "instance": "UART0",
      "signal": "TX",
      "pin": {
        "position": 8,
        "label": "GPIO14"
      },
      "mcu": {
        "name": "GPIO14",
        "gpio": 14
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "UART",
      "unit": 1,
      "instance": "UART0",
      "signal": "RX",
      "pin": {
        "position": 10,
        "label": "GPIO15"
      },
      "mcu": {
        "name": "GPIO15",
        "gpio": 15
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "PWM",
      "unit": 1,
      "instance": "PWM0",
      "signal": "CH2",
      "pin": {
        "position": 12,
        "label": "GPIO18"
      },
      "mcu": {
        "name": "GPIO18",
        "gpio": 18
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "PWM",
      "unit": 2,
      "instance": "PWM0",
      "signal": "CH0",
      "pin": {
        "position": 32,
        "label": "GPIO12"
      },
      "mcu": {
        "name": "GPIO12",
        "gpio": 12
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "GPIO",
      "unit": 1,
      "signal": "IO",
      "pin": {
        "position": 7,
        "label": "GPIO4"
      },
      "mcu": {
        "name": "GPIO4",
        "gpio": 4
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "GPIO",
      "unit": 2,
      "signal": "IO",
      "pin": {
        "position": 13,
        "label": "GPIO27"
      },
      "mcu": {
        "name": "GPIO27",
        "gpio": 27
      },
      "routed": false,
      "default": false,
      "cautions": []
    }
  ]
}
"
`;

exports[`pin plan exports > raspberry-pi-pico > matches the c-header snapshot 1`] = `
"// PinHub pin plan: Raspberry Pi Pico (raspberry-pi-pico)
// Connector: 40-pin castellated DIP edge
// Revision notes: none recorded in PinHub; check your board's silkscreen revision.
// Verify against: Raspberry Pi Pico pinout PDF https://pip-assets.raspberrypi.com/categories/610-raspberry-pi-pico/documents/RP-008309-DS-1-Pico-R3-A4-Pinout.pdf
// Pin functions from: https://github.com/raspberrypi/pico-sdk/blob/2.3.1/src/rp2040/hardware_regs/include/hardware/regs/io_bank0.h
// Pin functions from: https://github.com/raspberrypi/pico-sdk/blob/2.3.1/src/boards/include/boards/pico.h
// Pin functions from: https://github.com/raspberrypi/pico-sdk/blob/2.3.1/src/rp2_common/hardware_adc/include/hardware/adc.h
// Pin functions from: https://github.com/micropython/micropython/blob/v1.27.0/ports/rp2/machine_spi.c
// Pin functions from: https://github.com/micropython/micropython/blob/v1.27.0/ports/rp2/machine_i2c.c
// Pin functions from: https://github.com/micropython/micropython/blob/v1.27.0/ports/rp2/machine_uart.c
// Generated by PinHub — verify against the source before wiring. 2026-09-26

#ifndef PINHUB_PLAN_RASPBERRY_PI_PICO_H
#define PINHUB_PLAN_RASPBERRY_PI_PICO_H

// I2C 1: I2C0 SDA on physical pin 6, GP4
#define PINHUB_I2C0_SDA 4
// I2C 1: I2C0 SCL on physical pin 7, GP5
#define PINHUB_I2C0_SCL 5
// SPI 1: SPI0 SCK on physical pin 24, GP18
#define PINHUB_SPI0_SCK 18
// SPI 1: SPI0 MOSI on physical pin 25, GP19
#define PINHUB_SPI0_MOSI 19
// SPI 1: SPI0 MISO on physical pin 21, GP16
#define PINHUB_SPI0_MISO 16
// SPI 1: SPI0 CS on physical pin 22, GP17
#define PINHUB_SPI0_CS 17
// UART 1: UART0 TX on physical pin 1, GP0
#define PINHUB_UART0_TX 0
// UART 1: UART0 RX on physical pin 2, GP1
#define PINHUB_UART0_RX 1
// PWM 1: PWM1 A on physical pin 4, GP2
#define PINHUB_PWM1 2
// PWM 2: PWM1 B on physical pin 5, GP3
#define PINHUB_PWM2 3
// ADC 1: ADC CH0 on physical pin 31, GP26
#define PINHUB_ADC1 26
#define PINHUB_ADC1_CHANNEL 0
// GPIO 1 on physical pin 9, GP6
#define PINHUB_GPIO1 6
// GPIO 2 on physical pin 10, GP7
#define PINHUB_GPIO2 7

#endif // PINHUB_PLAN_RASPBERRY_PI_PICO_H
"
`;

exports[`pin plan exports > raspberry-pi-pico > matches the json snapshot 1`] = `
"{
  "board": {
    "id": "raspberry-pi-pico",
    "name": "Raspberry Pi Pico"
  },
  "connector": "40-pin castellated DIP edge",
  "revisionNotes": [],
  "verifySource": {
    "label": "Raspberry Pi Pico pinout PDF",
    "url": "https://pip-assets.raspberrypi.com/categories/610-raspberry-pi-pico/documents/RP-008309-DS-1-Pico-R3-A4-Pinout.pdf"
  },
  "notice": "Generated by PinHub — verify against the source before wiring.",
  "generated": "2026-09-26",
  "pinFunctionSources": [
    "https://github.com/raspberrypi/pico-sdk/blob/2.3.1/src/rp2040/hardware_regs/include/hardware/regs/io_bank0.h",
    "https://github.com/raspberrypi/pico-sdk/blob/2.3.1/src/boards/include/boards/pico.h",
    "https://github.com/raspberrypi/pico-sdk/blob/2.3.1/src/rp2_common/hardware_adc/include/hardware/adc.h",
    "https://github.com/micropython/micropython/blob/v1.27.0/ports/rp2/machine_spi.c",
    "https://github.com/micropython/micropython/blob/v1.27.0/ports/rp2/machine_i2c.c",
    "https://github.com/micropython/micropython/blob/v1.27.0/ports/rp2/machine_uart.c"
  ],
  "mux": {
    "model": "fixed",
    "note": "Each RP2040 GPIO selects one function from its row of the IO_BANK0 function-select table, so a bus can only use pins that table lists for it."
  },
  "assignments": [
    {
      "peripheral": "I2C",
      "unit": 1,
      "instance": "I2C0",
      "signal": "SDA",
      "pin": {
        "position": 6,
        "label": "GP4"
      },
      "mcu": {
        "name": "GPIO4",
        "gpio": 4
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "I2C",
      "unit": 1,
      "instance": "I2C0",
      "signal": "SCL",
      "pin": {
        "position": 7,
        "label": "GP5"
      },
      "mcu": {
        "name": "GPIO5",
        "gpio": 5
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI0",
      "signal": "SCK",
      "pin": {
        "position": 24,
        "label": "GP18"
      },
      "mcu": {
        "name": "GPIO18",
        "gpio": 18
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI0",
      "signal": "MOSI",
      "pin": {
        "position": 25,
        "label": "GP19"
      },
      "mcu": {
        "name": "GPIO19",
        "gpio": 19
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI0",
      "signal": "MISO",
      "pin": {
        "position": 21,
        "label": "GP16"
      },
      "mcu": {
        "name": "GPIO16",
        "gpio": 16
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "SPI",
      "unit": 1,
      "instance": "SPI0",
      "signal": "CS",
      "pin": {
        "position": 22,
        "label": "GP17"
      },
      "mcu": {
        "name": "GPIO17",
        "gpio": 17
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "UART",
      "unit": 1,
      "instance": "UART0",
      "signal": "TX",
      "pin": {
        "position": 1,
        "label": "GP0"
      },
      "mcu": {
        "name": "GPIO0",
        "gpio": 0
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "UART",
      "unit": 1,
      "instance": "UART0",
      "signal": "RX",
      "pin": {
        "position": 2,
        "label": "GP1"
      },
      "mcu": {
        "name": "GPIO1",
        "gpio": 1
      },
      "routed": false,
      "default": true,
      "cautions": []
    },
    {
      "peripheral": "PWM",
      "unit": 1,
      "instance": "PWM1",
      "signal": "A",
      "pin": {
        "position": 4,
        "label": "GP2"
      },
      "mcu": {
        "name": "GPIO2",
        "gpio": 2
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "PWM",
      "unit": 2,
      "instance": "PWM1",
      "signal": "B",
      "pin": {
        "position": 5,
        "label": "GP3"
      },
      "mcu": {
        "name": "GPIO3",
        "gpio": 3
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "ADC",
      "unit": 1,
      "instance": "ADC",
      "signal": "CH0",
      "pin": {
        "position": 31,
        "label": "GP26"
      },
      "mcu": {
        "name": "GPIO26",
        "gpio": 26
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "GPIO",
      "unit": 1,
      "signal": "IO",
      "pin": {
        "position": 9,
        "label": "GP6"
      },
      "mcu": {
        "name": "GPIO6",
        "gpio": 6
      },
      "routed": false,
      "default": false,
      "cautions": []
    },
    {
      "peripheral": "GPIO",
      "unit": 2,
      "signal": "IO",
      "pin": {
        "position": 10,
        "label": "GP7"
      },
      "mcu": {
        "name": "GPIO7",
        "gpio": 7
      },
      "routed": false,
      "default": false,
      "cautions": []
    }
  ]
}
"
`;

exports[`pin plan exports > raspberry-pi-pico > matches the micropython snapshot 1`] = `
"# PinHub pin plan: Raspberry Pi Pico (raspberry-pi-pico)
# Connector: 40-pin castellated DIP edge
# Revision notes: none recorded in PinHub; check your board's silkscreen revision.
# Verify against: Raspberry Pi Pico pinout PDF https://pip-assets.raspberrypi.com/categories/610-raspberry-pi-pico/documents/RP-008309-DS-1-Pico-R3-A4-Pinout.pdf
# Pin functions from: https://github.com/raspberrypi/pico-sdk/blob/2.3.1/src/rp2040/hardware_regs/include/hardware/regs/io_bank0.h
# Pin functions from: https://github.com/raspberrypi/pico-sdk/blob/2.3.1/src/boards/include/boards/pico.h
# Pin functions from: https://github.com/raspberrypi/pico-sdk/blob/2.3.1/src/rp2_common/hardware_adc/include/hardware/adc.h
# Pin functions from: https://github.com/micropython/micropython/blob/v1.27.0/ports/rp2/machine_spi.c
# Pin functions from: https://github.com/micropython/micropython/blob/v1.27.0/ports/rp2/machine_i2c.c
# Pin functions from: https://github.com/micropython/micropython/blob/v1.27.0/ports/rp2/machine_uart.c
# Generated by PinHub — verify against the source before wiring. 2026-09-26

from machine import ADC, I2C, PWM, Pin, SPI, UART

i2c0 = I2C(0, sda=Pin(4), scl=Pin(5))  # I2C 1: physical pin 6, GP4; physical pin 7, GP5
spi0 = SPI(0, sck=Pin(18), mosi=Pin(19), miso=Pin(16))  # SPI 1: physical pin 24, GP18; physical pin 25, GP19; physical pin 21, GP16; physical pin 22, GP17
spi0_cs = Pin(17, Pin.OUT, value=1)
uart0 = UART(0, tx=Pin(0), rx=Pin(1))  # UART 1: physical pin 1, GP0; physical pin 2, GP1
pwm1 = PWM(Pin(2))  # PWM 1: physical pin 4, GP2 (PWM1 A)
pwm2 = PWM(Pin(3))  # PWM 2: physical pin 5, GP3 (PWM1 B)
adc1 = ADC(Pin(26))  # ADC 1: physical pin 31, GP26 (ADC CH0)
gpio1 = Pin(6)  # GPIO 1: physical pin 9, GP6
gpio2 = Pin(7)  # GPIO 2: physical pin 10, GP7
"
`;
